--- a/AISE_3350A_FW24_Project.ipynb
+++ b/AISE_3350A_FW24_Project.ipynb
@@ -1857,6 +1857,64 @@
     "- Install Microsoft [Visual Studio Code](https://code.visualstudio.com/) as a Jupyter Notebook environment.\n",
     "  - An introduction to using Jupyter Notebooks in VS Code can be found [here](https://code.visualstudio.com/docs/datascience/jupyter-notebooks).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ***\n",
+    "## Introduction: Detail the motivation and background context explaining why this counting topic was chosen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Methods: Explain how you modified the sample code. If using ML, describe which model was chosen (and why), and how it was integrated into the existing code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Results: Write as a user manual explaining how to use your code. Include:\n",
+    "  * Sample test images\n",
+    "  * A set of documented tests\n",
+    "  * Results in tables and graphs\n",
+    "    * Consider using [numpy](https://numpy.org/) for any mathematical calculation including statistics\n",
+    "    * Consider using [matplotlib](https://matplotlib.org/) for graphs and plots.\n",
+    "    * The combination of [numpy](https://numpy.org/) and [matplotlib](https://matplotlib.org/) simulates the Matlab environment and the syntax are almost identical!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Discussion: Explain:\n",
+    "  * Why you chose your approach\n",
+    "  * What was needed to make it work\n",
+    "  * If issues arose, document the reasons (**It is acceptable if your program doesn't work perfectly** as long as you investigate why)\n",
+    "  * Potential societal/economic implications and impact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ***\n",
+    "## Conclusion: Detail what you learned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ***\n",
+    "## Bibliography: Provide a list of references relevant to your report. For example, if you use a publicly available ML model, provide a citation/reference to the original paper and the URL where you downloaded the model."
+   ]
   }
  ],
  "metadata": {
