--- a/AISE_3350A_FW24_Project.ipynb
+++ b/AISE_3350A_FW24_Project.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,12 +469,15 @@
     "        self.logger = logging.getLogger(__name__)\n",
     "        \n",
     "        # Processing parameters\n",
-    "        self.blur_kernel_size = (7, 7)\n",
+    "        self.blur_kernel_size = (5, 5)\n",
     "        self.adaptive_block_size = 11\n",
     "        self.clahe_parameters = {\n",
-    "            'clip_limit': 3.0,\n",
+    "            'clip_limit': 2.0,\n",
     "            'tile_grid_size': (8, 8)\n",
     "        }\n",
+    "        #sharpens the image\n",
+    "        self.sharpen_kernel = np.array([[-1, -1, -1], [-1, 9, -1], [-1, -1, -1]])\n",
+    "        \n",
     "        \n",
     "    def preprocess_image(self, image: np.ndarray) -> Tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
     "        \"\"\"\n",
@@ -501,6 +504,15 @@
     "            # Convert to HSV for better color detection\n",
     "            hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
     "            \n",
+    "                     # Apply CLAHE to normalize lighting\n",
+    "            lab = cv2.cvtColor(image, cv2.COLOR_BGR2LAB)\n",
+    "            l, a, b = cv2.split(lab)\n",
+    "            clahe = cv2.createCLAHE(clipLimit=self.clahe_parameters['clip_limit'],\n",
+    "                                    tileGridSize=self.clahe_parameters['tile_grid_size'])\n",
+    "            l = clahe.apply(l)\n",
+    "            lab = cv2.merge((l, a, b))\n",
+    "            enhanced = cv2.cvtColor(lab, cv2.COLOR_LAB2BGR)\n",
+    "\n",
     "            # Apply Gaussian blur to reduce noise\n",
     "            blurred = cv2.GaussianBlur(image, self.blur_kernel_size, 0)\n",
     "            \n",
@@ -700,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,41 +735,42 @@
     "        self.logger = logging.getLogger(__name__)\n",
     "        \n",
     "        # Circle detection parameters\n",
-    "        self.min_radius = 10\n",
-    "        self.max_radius = 30\n",
-    "        self.min_dist = 20\n",
+    "        self.min_radius = 5\n",
+    "        self.max_radius = 40\n",
+    "        self.min_dist = 15\n",
     "        self.param1 = 50  # Edge detection parameter\n",
     "        self.param2 = 30  # Circle detection parameter\n",
     "        \n",
     "        # Define color ranges in HSV format\n",
     "        self.color_ranges = {\n",
-    "            'red': {\n",
-    "                'lower1': np.array([0, 100, 100]),\n",
-    "                'upper1': np.array([10, 255, 255]),\n",
-    "                'lower2': np.array([160, 100, 100]),  # Red wraps around HSV\n",
-    "                'upper2': np.array([180, 255, 255])\n",
-    "            },\n",
-    "            'blue': {\n",
-    "                'lower': np.array([100, 100, 100]),\n",
-    "                'upper': np.array([130, 255, 255])\n",
-    "            },\n",
-    "            'green': {\n",
-    "                'lower': np.array([40, 100, 100]),\n",
-    "                'upper': np.array([80, 255, 255])\n",
-    "            },\n",
-    "            'yellow': {\n",
-    "                'lower': np.array([20, 100, 100]),\n",
-    "                'upper': np.array([35, 255, 255])\n",
-    "            },\n",
-    "            'orange': {\n",
-    "                'lower': np.array([10, 100, 100]),\n",
-    "                'upper': np.array([20, 255, 255])\n",
-    "            },\n",
-    "            'brown': {\n",
-    "                'lower': np.array([0, 100, 20]),\n",
-    "                'upper': np.array([20, 255, 100])\n",
-    "            }\n",
-    "        }\n",
+    "    'red': {\n",
+    "        'lower1': np.array([0, 30, 30]),  # Widen saturation and value ranges\n",
+    "        'upper1': np.array([10, 255, 255]),\n",
+    "        'lower2': np.array([170, 30, 30]),\n",
+    "        'upper2': np.array([180, 255, 255])\n",
+    "    },\n",
+    "    'blue': {\n",
+    "        'lower': np.array([90, 50, 50]),  # Adjust for lighter/darker shades\n",
+    "        'upper': np.array([130, 255, 255])\n",
+    "    },\n",
+    "    'green': {\n",
+    "        'lower': np.array([35, 50, 50]),  # Include slightly different greens\n",
+    "        'upper': np.array([85, 255, 255])\n",
+    "    },\n",
+    "    'yellow': {\n",
+    "        'lower': np.array([20, 50, 50]),\n",
+    "        'upper': np.array([40, 255, 255])\n",
+    "    },\n",
+    "    'orange': {\n",
+    "        'lower': np.array([10, 100, 50]),  # Adjust saturation and brightness\n",
+    "        'upper': np.array([25, 255, 255])\n",
+    "    },\n",
+    "    'brown': {\n",
+    "        'lower': np.array([0, 50, 20]),  # Slightly widen for dim lighting\n",
+    "        'upper': np.array([20, 200, 100])\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "        \n",
     "        # Detection parameters history for analysis\n",
     "        self.detection_history = []\n",
@@ -773,39 +786,18 @@
     "            Array of detected circles (x, y, radius)\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            # Validate input\n",
-    "            if gray is None or gray.size == 0:\n",
-    "                raise ValueError(\"Invalid input image\")\n",
-    "                \n",
-    "            # Apply Hough Circle Transform\n",
     "            circles = cv2.HoughCircles(\n",
-    "                gray,\n",
-    "                cv2.HOUGH_GRADIENT,\n",
-    "                dp=1,\n",
-    "                minDist=self.min_dist,\n",
-    "                param1=self.param1,\n",
-    "                param2=self.param2,\n",
-    "                minRadius=self.min_radius,\n",
-    "                maxRadius=self.max_radius\n",
+    "                gray, cv2.HOUGH_GRADIENT, dp=1, minDist=self.min_dist,\n",
+    "                param1=self.param1, param2=self.param2,\n",
+    "                minRadius=self.min_radius, maxRadius=self.max_radius\n",
     "            )\n",
-    "            \n",
-    "            # Process detected circles\n",
     "            if circles is not None:\n",
     "                circles = np.uint16(np.around(circles))\n",
-    "                \n",
-    "                # Record detection parameters and results\n",
-    "                self.detection_history.append({\n",
-    "                    'parameters': self.get_parameters(),\n",
-    "                    'circles_detected': len(circles[0])\n",
-    "                })\n",
-    "                \n",
     "                return circles[0]\n",
     "            return np.array([])\n",
-    "            \n",
     "        except Exception as e:\n",
     "            self.logger.error(f\"Error in circle detection: {str(e)}\")\n",
     "            raise\n",
-    "            \n",
     "    def identify_colors(self, hsv: np.ndarray, circles: np.ndarray) -> List[str]:\n",
     "        \"\"\"\n",
     "        Identify colors of detected M&Ms.\n",
@@ -818,24 +810,15 @@
     "            List of color names for each detected M&M\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            if hsv is None or circles is None:\n",
-    "                raise ValueError(\"Invalid inputs for color identification\")\n",
-    "                \n",
     "            colors = []\n",
     "            for (x, y, r) in circles:\n",
-    "                # Create mask for current circle\n",
     "                mask = np.zeros(hsv.shape[:2], dtype=np.uint8)\n",
-    "                cv2.circle(mask, (x, y), r-5, 255, -1)\n",
-    "                \n",
-    "                # Get mean color in the masked area\n",
-    "                mean_color = cv2.mean(hsv, mask=mask)[:3]\n",
-    "                \n",
-    "                # Identify color\n",
-    "                detected_color = self._classify_color(mean_color)\n",
+    "                cv2.circle(mask, (x, y), r - 2, 255, -1)\n",
+    "\n",
+    "                mean_hsv = cv2.mean(hsv, mask=mask)[:3]\n",
+    "                detected_color = self._classify_color(mean_hsv)\n",
     "                colors.append(detected_color)\n",
-    "                \n",
     "            return colors\n",
-    "            \n",
     "        except Exception as e:\n",
     "            self.logger.error(f\"Error in color identification: {str(e)}\")\n",
     "            raise\n",
@@ -851,136 +834,22 @@
     "            Identified color name\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            hsv_np = np.uint8([[list(hsv_color)]])\n",
-    "            \n",
-    "            # Check each color range\n",
-    "            for color_name, ranges in self.color_ranges.items():\n",
-    "                if color_name == 'red':\n",
-    "                    # Special case for red (wraps around HSV)\n",
-    "                    mask1 = cv2.inRange(hsv_np, ranges['lower1'], ranges['upper1'])\n",
-    "                    mask2 = cv2.inRange(hsv_np, ranges['lower2'], ranges['upper2'])\n",
-    "                    if mask1.any() or mask2.any():\n",
-    "                        return color_name\n",
+    "            for color, ranges in self.color_ranges.items():\n",
+    "                if isinstance(ranges, list):  # Handle red case with two ranges\n",
+    "                    for range_set in ranges:\n",
+    "                        if self._is_in_range(hsv_color, range_set):\n",
+    "                            return color\n",
     "                else:\n",
-    "                    mask = cv2.inRange(hsv_np, ranges['lower'], ranges['upper'])\n",
-    "                    if mask.any():\n",
-    "                        return color_name\n",
-    "                        \n",
+    "                    if self._is_in_range(hsv_color, ranges):\n",
+    "                        return color\n",
     "            return 'unknown'\n",
-    "            \n",
     "        except Exception as e:\n",
     "            self.logger.error(f\"Error in color classification: {str(e)}\")\n",
     "            raise\n",
+    "    def _is_in_range(self, hsv_color: Tuple[float, float, float], color_range: Dict) -> bool:\n",
+    "        return all(color_range['lower'] <= hsv_color) and all(hsv_color <= color_range['upper'])\n",
     "            \n",
-    "    def adjust_detection_params(self, min_radius: Optional[int] = None,\n",
-    "                              max_radius: Optional[int] = None,\n",
-    "                              min_dist: Optional[int] = None,\n",
-    "                              param1: Optional[int] = None,\n",
-    "                              param2: Optional[int] = None) -> None:\n",
-    "        \"\"\"\n",
-    "        Adjust circle detection parameters.\n",
-    "        \n",
-    "        Args:\n",
-    "            min_radius: Minimum circle radius\n",
-    "            max_radius: Maximum circle radius\n",
-    "            min_dist: Minimum distance between circles\n",
-    "            param1: Edge detection parameter\n",
-    "            param2: Circle detection parameter\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            if min_radius is not None:\n",
-    "                self.min_radius = max(1, min_radius)\n",
-    "            if max_radius is not None:\n",
-    "                self.max_radius = max(self.min_radius, max_radius)\n",
-    "            if min_dist is not None:\n",
-    "                self.min_dist = max(1, min_dist)\n",
-    "            if param1 is not None:\n",
-    "                self.param1 = max(1, param1)\n",
-    "            if param2 is not None:\n",
-    "                self.param2 = max(1, param2)\n",
-    "                \n",
-    "            self.logger.info(\"Detection parameters adjusted: \" + \n",
-    "                           f\"min_radius={self.min_radius}, \" +\n",
-    "                           f\"max_radius={self.max_radius}, \" +\n",
-    "                           f\"min_dist={self.min_dist}, \" +\n",
-    "                           f\"param1={self.param1}, \" +\n",
-    "                           f\"param2={self.param2}\")\n",
-    "                \n",
-    "        except Exception as e:\n",
-    "            self.logger.error(f\"Error adjusting detection parameters: {str(e)}\")\n",
-    "            raise\n",
-    "            \n",
-    "    def get_parameters(self) -> Dict:\n",
-    "        \"\"\"\n",
-    "        Get current detection parameters.\n",
-    "        \n",
-    "        Returns:\n",
-    "            Current parameter values\n",
-    "        \"\"\"\n",
-    "        return {\n",
-    "            'min_radius': self.min_radius,\n",
-    "            'max_radius': self.max_radius,\n",
-    "            'min_dist': self.min_dist,\n",
-    "            'param1': self.param1,\n",
-    "            'param2': self.param2\n",
-    "        }\n",
-    "        \n",
-    "    def process_image(self, gray: np.ndarray, hsv: np.ndarray) -> Tuple[np.ndarray, List[str]]:\n",
-    "        \"\"\"\n",
-    "        Complete processing pipeline for M&M detection and classification.\n",
-    "        \n",
-    "        Args:\n",
-    "            gray: Grayscale image\n",
-    "            hsv: HSV format image\n",
-    "            \n",
-    "        Returns:\n",
-    "            Tuple containing detected circles and their colors\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            # Detect circles\n",
-    "            circles = self.detect_circles(gray)\n",
-    "            \n",
-    "            # Identify colors if circles were found\n",
-    "            colors = self.identify_colors(hsv, circles) if len(circles) > 0 else []\n",
-    "            \n",
-    "            return circles, colors\n",
-    "            \n",
-    "        except Exception as e:\n",
-    "            self.logger.error(f\"Error in image processing: {str(e)}\")\n",
-    "            raise\n",
-    "            \n",
-    "    def draw_results(self, image: np.ndarray, circles: np.ndarray, \n",
-    "                    colors: List[str]) -> np.ndarray:\n",
-    "        \"\"\"\n",
-    "        Draw detection results on the image.\n",
-    "        \n",
-    "        Args:\n",
-    "            image: Original image\n",
-    "            circles: Detected circles\n",
-    "            colors: Identified colors\n",
-    "            \n",
-    "        Returns:\n",
-    "            Image with detection results drawn\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            result_image = image.copy()\n",
-    "            \n",
-    "            for (x, y, r), color in zip(circles, colors):\n",
-    "                # Draw circle outline\n",
-    "                cv2.circle(result_image, (x, y), r, (0, 255, 0), 2)\n",
-    "                \n",
-    "                # Draw center point\n",
-    "                cv2.circle(result_image, (x, y), 2, (0, 0, 255), 3)\n",
-    "                \n",
-    "                # Add color label\n",
-    "                cv2.putText(result_image, color, (x-20, y-20),\n",
-    "                           cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2)\n",
-    "                \n",
-    "            return result_image\n",
-    "            \n",
-    "        except Exception as e:\n",
-    "            self.logger.error(f\"Error drawing results: {str(e)}\")\n",
-    "            raise\n"
+    "   "
    ]
   },
   {
