--- a/AISE_3350A_FW24_Project.ipynb
+++ b/AISE_3350A_FW24_Project.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1681,16 @@
    "metadata": {},
    "source": [
     " ***\n",
-    "## Introduction: Detail the motivation and background context explaining why this counting topic was chosen"
+    "## Introduction: Detail the motivation and background context explaining why this counting topic was chosen\n",
+    "\n",
+    "Efficient inventory management in warehouse operations, yet many businesses still rely on manual methods that are time-consuming, error-prone, and disruptive to customer service. Automated inventory systems, while effective, are often prohibitively expensive or difficult to adapt to specific needs. This project aims to create a cost-effective solution by improving the provided Python code for counting M&M candies. We aim to develop a functional counting system , debugging and enhancing computer the current code.\n",
+    "\n",
+    "This topic was chosen because it represents a critical problem in real-world inventory tracking while being accessible enough to demonstrate practical applications. The goal is to refine the provided OpenCV-based code into a robust and adaptable inventory counting solution. This requires resolving specific limitations, such as dependence on ideal lighting conditions, assumptions about object shape, and errors in color classification. The improvements aim to create a versatile system that can be extended to other inventory use cases, such as counting objects of varying shapes and colors.\n",
+    "\n",
+    "The project will be implemented by first analyzing the current code to identify its specific weaknesses. Initial tests with sample images will help quantify errors in detection and classification. Improvements will then be introduced iteratively, starting with lighting normalization techniques, such as adaptive histogram equalization, to reduce the impact of lighting inconsistencies. The circle detection algorithm will be replaced with contour-based detection methods to handle overlapping and irregularly shaped m&ms. Colour classification will be enhanced by transforming images to alternative color spaces, like HSV or LAB, which are less sensitive to lighting variations, and clustering techniques will be applied to improve segmentation accuracy. Additionally, the code will be edited for better readability, optimization, and adaptability to other object types.\n",
+    "\n",
+    "By the end of this project, the enhanced code will not only function effectively for the test case of M&M candies but also serve as a foundation for broader applications in inventory systems. The improvements and results will be documented thoroughly including sample tests, performance metrics, and setup instructions.\n",
+    "\n"
    ]
   },
   {
@@ -1689,7 +1698,10 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Methods: Explain how you modified the sample code. If using ML, describe which model was chosen (and why), and how it was integrated into the existing code"
+    "## Methods: Explain how you modified the sample code. If using ML, describe which model was chosen (and why), and how it was integrated into the existing code\n",
+    "\n",
+    "\n",
+    " "
    ]
   },
   {
