--- a/AISE_3350A_FW24_Project.ipynb
+++ b/AISE_3350A_FW24_Project.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,6 +678,35 @@
     "        param2: Second parameter for Hough Circle detection\n",
     "        color_ranges: HSV color ranges for M&M classification\n",
     "    \"\"\"\n",
+    "    def process_image(self, gray: np.ndarray, hsv: np.ndarray) -> Tuple[np.ndarray, List[str]]:\n",
+    "        \"\"\"\n",
+    "        Process the image to detect M&Ms and identify their colors.\n",
+    "\n",
+    "        Args:\n",
+    "            gray: Grayscale image for circle detection.\n",
+    "            hsv: HSV image for color identification.\n",
+    "\n",
+    "        Returns:\n",
+    "            A tuple containing:\n",
+    "                - circles: Detected circles (x, y, radius) as a NumPy array.\n",
+    "                - colors: List of identified colors for each circle.\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            # Detect circles using Hough Transform\n",
+    "            circles = self.detect_circles(gray)\n",
+    "\n",
+    "            # If no circles detected, return empty results\n",
+    "            if circles is None or len(circles) == 0:\n",
+    "                return np.array([]), []\n",
+    "\n",
+    "            # Identify colors of the detected circles\n",
+    "            colors = self.identify_colors(hsv, circles)\n",
+    "\n",
+    "            return circles, colors\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            logging.getLogger(__name__).error(f\"Error in process_image: {str(e)}\")\n",
+    "            raise\n",
     "    \n",
     "    def __init__(self):\n",
     "        # Setup logging\n",
@@ -691,19 +720,18 @@
     "        self.param2 = 30  # Circle detection parameter\n",
     "        \n",
     "        # Define color ranges in HSV format\n",
+    "        \n",
     "        self.color_ranges = {\n",
-    "    'red': {\n",
-    "        'lower1': np.array([0, 30, 30]),  # Widen saturation and value ranges\n",
-    "        'upper1': np.array([10, 255, 255]),\n",
-    "        'lower2': np.array([170, 30, 30]),\n",
-    "        'upper2': np.array([180, 255, 255])\n",
-    "    },\n",
+    "    'red': [\n",
+    "        {'lower': np.array([0, 30, 30]), 'upper': np.array([10, 255, 255])},\n",
+    "        {'lower': np.array([170, 30, 30]), 'upper': np.array([180, 255, 255])}\n",
+    "    ],\n",
     "    'blue': {\n",
-    "        'lower': np.array([90, 50, 50]),  # Adjust for lighter/darker shades\n",
+    "        'lower': np.array([90, 50, 50]),\n",
     "        'upper': np.array([130, 255, 255])\n",
     "    },\n",
     "    'green': {\n",
-    "        'lower': np.array([35, 50, 50]),  # Include slightly different greens\n",
+    "        'lower': np.array([35, 50, 50]),\n",
     "        'upper': np.array([85, 255, 255])\n",
     "    },\n",
     "    'yellow': {\n",
@@ -711,16 +739,76 @@
     "        'upper': np.array([40, 255, 255])\n",
     "    },\n",
     "    'orange': {\n",
-    "        'lower': np.array([10, 100, 50]),  # Adjust saturation and brightness\n",
+    "        'lower': np.array([10, 100, 50]),  # Adjusted for brighter orange\n",
     "        'upper': np.array([25, 255, 255])\n",
     "    },\n",
+    "    'purple': {  # New color range for purple\n",
+    "        'lower': np.array([130, 50, 50]),\n",
+    "        'upper': np.array([160, 255, 255])\n",
+    "    },\n",
     "    'brown': {\n",
-    "        'lower': np.array([0, 50, 20]),  # Slightly widen for dim lighting\n",
+    "        'lower': np.array([0, 50, 20]),\n",
     "        'upper': np.array([20, 200, 100])\n",
     "    }\n",
     "}\n",
     "\n",
+    "    def visualize_hsv_ranges(self, image_path: str):\n",
+    "        \"\"\"\n",
+    "        Visualize the HSV masks for each color range.\n",
+    "\n",
+    "        Args:\n",
+    "            image_path: Path to the image file.\n",
+    "\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        image = cv2.imread(image_path)\n",
+    "        hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
     "        \n",
+    "        for color, ranges in self.color_ranges.items():\n",
+    "            if isinstance(ranges, list):  # Handle multi-range colors like red\n",
+    "                mask = cv2.inRange(hsv_image, ranges[0]['lower'], ranges[0]['upper'])\n",
+    "                mask += cv2.inRange(hsv_image, ranges[1]['lower'], ranges[1]['upper'])\n",
+    "            else:\n",
+    "                mask = cv2.inRange(hsv_image, ranges['lower'], ranges['upper'])\n",
+    "            \n",
+    "            cv2.imshow(f\"{color} Mask\", mask)\n",
+    "            cv2.waitKey(0)\n",
+    "            cv2.destroyAllWindows()\n",
+    "\n",
+    "    def adjust_detection_params(self, min_radius: int = None, max_radius: int = None, min_dist: int = None,\n",
+    "                                param1: int = None, param2: int = None) -> None:\n",
+    "        \"\"\"\n",
+    "        Adjusts the detection parameters dynamically.\n",
+    "\n",
+    "        Args:\n",
+    "            min_radius: Minimum circle radius for detection.\n",
+    "            max_radius: Maximum circle radius for detection.\n",
+    "            min_dist: Minimum distance between detected circles.\n",
+    "            param1: First parameter for Hough Circle detection (e.g., for edge detection).\n",
+    "            param2: Second parameter for Hough Circle detection (e.g., for circle detection).\n",
+    "\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            if min_radius is not None:\n",
+    "                self.min_radius = min_radius\n",
+    "            if max_radius is not None:\n",
+    "                self.max_radius = max_radius\n",
+    "            if min_dist is not None:\n",
+    "                self.min_dist = min_dist\n",
+    "            if param1 is not None:\n",
+    "                self.param1 = param1\n",
+    "            if param2 is not None:\n",
+    "                self.param2 = param2\n",
+    "\n",
+    "            self.logger.info(\"Detection parameters updated successfully.\")\n",
+    "        except Exception as e:\n",
+    "            self.logger.error(f\"Error adjusting detection parameters: {str(e)}\")\n",
+    "            raise\n",
+    "\n",
+    "    # Other methods like _is_in_range, _classify_color, draw_results...\n",
     "        # Detection parameters history for analysis\n",
     "        self.detection_history = []\n",
     "        \n",
@@ -747,6 +835,19 @@
     "        except Exception as e:\n",
     "            self.logger.error(f\"Error in circle detection: {str(e)}\")\n",
     "            raise\n",
+    "    def _is_in_range(self, hsv_color: np.ndarray, lower: np.ndarray, upper: np.ndarray) -> bool:\n",
+    "        \"\"\"\n",
+    "        Check if the HSV color falls within the given range.\n",
+    "\n",
+    "        Args:\n",
+    "            hsv_color: HSV color values as a NumPy array (e.g., [H, S, V]).\n",
+    "            lower: Lower bound of the HSV range as a NumPy array.\n",
+    "            upper: Upper bound of the HSV range as a NumPy array.\n",
+    "\n",
+    "        Returns:\n",
+    "            True if the color is within range, otherwise False.\n",
+    "        \"\"\"\n",
+    "        return np.all(lower <= hsv_color) and np.all(hsv_color <= upper)\n",
     "    def identify_colors(self, hsv: np.ndarray, circles: np.ndarray) -> List[str]:\n",
     "        \"\"\"\n",
     "        Identify colors of detected M&Ms.\n",
@@ -772,38 +873,68 @@
     "            self.logger.error(f\"Error in color identification: {str(e)}\")\n",
     "            raise\n",
     "            \n",
-    "    def _classify_color(self, hsv_color: Tuple[float, float, float]) -> str:\n",
+    "    def _classify_color(self, hsv_color: np.ndarray) -> str:\n",
     "        \"\"\"\n",
     "        Classify color based on HSV values.\n",
-    "        \n",
+    "\n",
     "        Args:\n",
-    "            hsv_color: HSV color values\n",
-    "            \n",
+    "         hsv_color: HSV color values.\n",
+    "\n",
     "        Returns:\n",
-    "            Identified color name\n",
+    "            Identified color name.\n",
     "        \"\"\"\n",
     "        try:\n",
     "            for color, ranges in self.color_ranges.items():\n",
-    "                if isinstance(ranges, list):  # Handle red case with two ranges\n",
+    "                if isinstance(ranges, list):  # Handle multiple ranges (e.g., 'red')\n",
     "                    for range_set in ranges:\n",
-    "                        if self._is_in_range(hsv_color, range_set):\n",
+    "                        if self._is_in_range(hsv_color, range_set['lower'], range_set['upper']):\n",
     "                            return color\n",
-    "                else:\n",
-    "                    if self._is_in_range(hsv_color, ranges):\n",
+    "                else:  # Handle single range\n",
+    "                    if self._is_in_range(hsv_color, ranges['lower'], ranges['upper']):\n",
     "                        return color\n",
-    "            return 'unknown'\n",
+    "            return 'unknown'  # Default return if no match found\n",
     "        except Exception as e:\n",
-    "            self.logger.error(f\"Error in color classification: {str(e)}\")\n",
+    "            logging.getLogger(__name__).error(f\"Error in color classification: {str(e)}\")\n",
     "            raise\n",
-    "    def _is_in_range(self, hsv_color: Tuple[float, float, float], color_range: Dict) -> bool:\n",
-    "        return all(color_range['lower'] <= hsv_color) and all(hsv_color <= color_range['upper'])\n",
-    "            \n",
+    "\n",
+    "    def draw_results(self, image: np.ndarray, circles: np.ndarray, colors: List[str]) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        Draws detected circles and their associated colors on the image.\n",
+    "\n",
+    "        Args:\n",
+    "            image: Original input image.\n",
+    "            circles: Detected circles as an array of (x, y, radius).\n",
+    "            colors: List of color names corresponding to the detected circles.\n",
+    "\n",
+    "        Returns:\n",
+    "            Annotated image with drawn circles and color labels.\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            # Make a copy of the image to draw on\n",
+    "            result_image = image.copy()\n",
+    "\n",
+    "            # Loop through each detected circle\n",
+    "            for (x, y, r), color in zip(circles, colors):\n",
+    "                # Draw the circle\n",
+    "                cv2.circle(result_image, (x, y), r, (0, 255, 0), 2)  # Green circle outline\n",
+    "\n",
+    "                # Add color label text\n",
+    "                cv2.putText(result_image, color, (x - r, y - r - 10), cv2.FONT_HERSHEY_SIMPLEX, \n",
+    "                            0.5, (255, 255, 255), 2)  # White text\n",
+    "\n",
+    "            return result_image\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            self.logger.error(f\"Error drawing results: {str(e)}\")\n",
+    "            raise\n",
+    "\n",
+    "\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,9 +1774,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-04 00:25:25,727 - __main__ - INFO - Loaded image from C:/Users/rayya/OneDrive/Desktop/Images/1-2142f133.jpg\n",
+      "2024-12-04 00:25:45,591 - __main__ - INFO - Loaded image from C:/Users/rayya/OneDrive/Desktop/Images/download.jpeg\n",
+      "C:\\Users\\rayya\\AppData\\Local\\Temp\\ipykernel_24884\\2162378120.py:255: RuntimeWarning: overflow encountered in scalar subtract\n",
+      "  cv2.putText(result_image, color, (x - r, y - r - 10), cv2.FONT_HERSHEY_SIMPLEX,\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     app \u001b[38;5;241m=\u001b[39m MMCounterGUI()\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError starting application: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[14], line 398\u001b[0m, in \u001b[0;36mMMCounterGUI.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    396\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Start the GUI application.\"\"\"\u001b[39;00m\n\u001b[0;32m    397\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 398\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    399\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    400\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger\u001b[38;5;241m.\u001b[39merror(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mApplication error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\rayya\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py:1499\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1497\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m   1498\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1499\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Create and run the application\n",
     "if __name__ == \"__main__\":\n",
@@ -1737,7 +1892,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1751,7 +1906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
