--- a/AISE_3350A_FW24_Project.ipynb
+++ b/AISE_3350A_FW24_Project.ipynb
@@ -1885,8 +1885,13 @@
     " ***\n",
     " \n",
     "## Bibliography\n",
+    "OpenCV Documentation: https://docs.opencv.org\n",
     "\n",
-    " Provide a list of references relevant to your report. For example, if you use a publicly available ML model, provide a citation/reference to the original paper and the URL where you downloaded the model."
+    "LAB Color Space and CLAHE: https://learnopencv.com\n",
+    "\n",
+    "HSV Color Ranges: https://docs.opencv.org/trunk/df/d9d/tutorial_py_colorspaces.html\n",
+    "\n",
+    "Python Tkinter GUI Guide: https://docs.python.org/3/library/tk.html"
    ]
   }
  ],
